--- a/PaymentService/src/main/resources/application.yml
+++ b/PaymentService/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: 'true'
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
@@ -23,3 +23,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 server:
   port: '8082'
+  
